# DYOD_SoSe23

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  LICENSE  README.md  install_dependencies.sh
.github/workflows/: ci.yml
scripts/: coverage.sh  format.sh  lint.sh
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  all_type_variant.hpp  null_value.hpp  resolve_type.hpp  strong_typedef.hpp  type_cast.hpp  types.hpp
src/lib/operators/: abstract_operator.cpp  abstract_operator.hpp  get_table.hpp  print.cpp  print.hpp  table_scan.hpp  table_wrapper.cpp  table_wrapper.hpp
src/lib/storage/: abstract_attribute_vector.hpp  abstract_segment.hpp  chunk.cpp  chunk.hpp  dictionary_segment.cpp  dictionary_segment.hpp  reference_segment.cpp  reference_segment.hpp  storage_manager.cpp  storage_manager.hpp  table.cpp  table.hpp  value_segment.cpp  value_segment.hpp
src/lib/utils/: assert.hpp  load_table.cpp  load_table.hpp  string_utils.cpp  string_utils.hpp
src/test/: CMakeLists.txt  base_test.cpp  base_test.hpp  gtest_case_template.cpp
src/test/lib/: all_type_variant_test.cpp
src/test/operators/: get_table_test.cpp  print_test.cpp  table_scan_test.cpp
src/test/storage/: chunk_test.cpp  dictionary_segment_test.cpp  reference_segment_test.cpp  storage_manager_test.cpp  table_test.cpp  value_segment_test.cpp
